# DrawBMP

./: .gitignore  CMakeLists.txt
src/: BMPImage.cpp  BMPImage.h  main.cpp
